--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
-
+@import './ui/organisms/Weather/Weather.Scss';
+@import './ui/molecules/DailyObj/DailyObj.Scss';
 
 body, html {
   margin: 0;
   padding: 0;
   font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 *, ::after, ::before {
   box-sizing: border-box;
