--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
 @import './ui/organisms/Weather/Weather.Scss';
 @import './ui/molecules/DailyObj/DailyObj.Scss';
+@import './ui//molecules/HourlyObj/HourlyObj.Scss';
 
 body, html {
   margin: 0;
   padding: 0;
   font-size: 20px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Comic Sans MS;
 }
 *, ::after, ::before {
   box-sizing: border-box;
