--- a/src/ui/molecules/DailyObj/DailyObj.Scss
+++ b/src/ui/molecules/DailyObj/DailyObj.Scss
@@ -1,15 +1,20 @@
 .daily-wrapper {
   display: flex;
   width: 100%;
-  height: 50%;
   &__holder {
     width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    background: #96104e;
+    margin: 10px;
+    border-radius: 10px;
+    > h3 {
+      margin: 0;
+    }
     > span:first-of-type {
-      font-size: 32px;
+      font-size: 35px;
     }
     > span {
       color: #160444;
@@ -17,13 +22,16 @@
       font-weight: 700;
     }
   }
+  &__holder:nth-child(2n) {
+    background: #31539c;
+  }
   .image-holder {
     width: 100%;
     height: auto;
     display: flex;
     justify-content: center;
     > img {
-      width: 50%;
+      width: 60%;
       height: auto;
     }
   }
