--- a/src/ui/organisms/Weather/Weather.Scss
+++ b/src/ui/organisms/Weather/Weather.Scss
@@ -1,4 +1,4 @@
-.weather-container {
+.weather-container-daily {
   width: 100%;
   height: 100vh;
   background: linear-gradient(to bottom, #00d4ff, #7f05db, #edaa17);
