--- a/src/ui/organisms/Weather/Weather.Scss
+++ b/src/ui/organisms/Weather/Weather.Scss
@@ -4,4 +4,31 @@
   background: linear-gradient(to bottom, #00d4ff, #7f05db, #edaa17);
   padding: 20px;
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  > a {
+    align-self: center;
+    color: #fff;
+    transition: 0.5s all ease;
+    font-size: 28px;
+  }
+  > a:hover {
+    color: #160444;
+  }
+}
+.weather-container-hourly {
+  display: flex;
+  flex-direction: column;
+  > .hourly {
+    display: flex;
+    justify-content: center;
+    background-color: #160444;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+  }
+  a {
+    font-size: 32px;
+    color: #fff;
+  }
 }
