--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
-@import './ui/organisms/Weather/weather.Scss';
-@import './ui/molecules/DailyObj/dailyobj.Scss';
-@import './ui//molecules/HourlyObj/hourlyobj.Scss';
+@import './ui/organisms/Weather/Weather.scss';
+@import './ui/molecules/DailyObj/DailyObj.scss';
+@import './ui//molecules/HourlyObj/HourlyObj.scss';
 
 body,
 html {
